holding commit. im getting rid of loud thinking

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
 # 
 # Or run from the airflow directory:
 # cd airflow && uv run python dags/ingest_products.py
+GEMINI_API_KEY=AIzaSyDcHq4YKta4QBonhkrN9Pj4qlTWbcte21A
