--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -5,4 +5,4 @@ load_examples = False
 
 [database]
 # Use SQLite database in this directory
-sql_alchemy_conn = sqlite:///airflow.db
+sql_alchemy_conn = sqlite:////Users/suryaduggirala/Documents/coding/mini-data-platform/airflow/airflow.db
