--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "duckdb>=1.4.1",
     "google-genai>=1.0.0",
     "plotext>=5.2.8",
+    "prompt-toolkit>=3.0.0",
     "python-dotenv>=1.0.0",
 ]
 
