facilitated pypi cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,18 @@
 [project]
-name = "mini-data-platform"
+name = "astro-surya-oss"
 version = "0.1.0"
-description = "Add your description here"
+description = "Query your DuckDB data warehouse using natural language"
 readme = "README.md"
+license = "MIT"
 requires-python = ">=3.13"
+authors = [{ name = "Surya Duggirala" }]
+keywords = ["duckdb", "llm", "data-warehouse", "natural-language", "gemini"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.13",
+]
 dependencies = [
-    "apache-airflow>=3.1.2",
-    "dbt-duckdb>=1.10.0",
     "duckdb>=1.4.1",
     "google-genai>=1.0.0",
     "plotext>=5.2.8",
@@ -22,4 +28,4 @@ build-backend = "hatchling.build"
 packages = ["astro"]
 
 [project.scripts]
-astro = "astro.cli:main"
+surya-astro = "astro.cli:main"
