--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
 [project]
-name = "astro-surya-oss"
+name = "surya-mini-data-platform"
 version = "0.1.0"
-description = "Query your DuckDB data warehouse using natural language"
+description = "Agentically query your DuckDB data warehouse using natural language"
 readme = "README.md"
-license = "MIT"
 requires-python = ">=3.13"
 authors = [{ name = "Surya Duggirala" }]
 keywords = ["duckdb", "llm", "data-warehouse", "natural-language", "gemini"]
@@ -21,13 +20,6 @@ dependencies = [
     "prompt-toolkit>=3.0.0",
     "python-dotenv>=1.0.0",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["astro"]
 
 [project.scripts]
 astro = "astro.cli:main"
