verfied data additions and data deletions and querying over it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "surya-mini-data-platform"
 version = "0.1.0"
 description = "Agentically query your DuckDB data warehouse using natural language"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
     "apache-airflow>=3.1.2",
     "dbt-duckdb>=1.10.0",
@@ -16,3 +16,13 @@ dependencies = [
 
 [project.scripts]
 astro = "astro.cli:main"
+
+[tool.uv]
+package = true
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["astro"]
